plugins {
	id 'java'
	id 'groovy'
	id "com.diffplug.spotless" version "6.13.0"
	id 'org.openrewrite.rewrite' version '5.34.0'
	id "com.github.jakemarsden.git-hooks" version "0.0.2"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:1.13.1"))
	rewrite("org.openrewrite.recipe:rewrite-migrate-java")
	rewrite("org.openrewrite.recipe:rewrite-java-security")
}

spotless {
	java {
		importOrder()
		removeUnusedImports()
		prettier()
		formatAnnotations()
	}
	groovy {
		importOrder()
		excludeJava()
		greclipse()
	}
	groovyGradle {
		greclipse()
	}
}

rewrite {
	activeRecipe(
			"org.openrewrite.java.security.SecureRandom",
			"org.openrewrite.java.security.JavaSecurityBestPractices",
			"org.openrewrite.java.migrate.UpgradeToJava17",
			"org.openrewrite.java.cleanup.CommonStaticAnalysis"
			)
}

gitHooks {
	hooks = ['pre-commit': 'check']
}